--- a/views/userpage/saved-routes.hbs
+++ b/views/userpage/saved-routes.hbs
@@ -29,3 +29,13 @@
   {{/each }}
 
 </div>
+
+
+<div class="footer">
+  <p>direct CO2 emissions: carbon dioxide emissions produced during flight, i.e. fuel combustion</p>
+  <p>direct CH4 emissions: methane emissions produced during flight, i.e. fuel combustion</p>
+  <p>direct N2O emissions: nitrous oxide emissions produced during flight, i.e. fuel combustion</p>
+  <p>total direct emissions: all direct emissions, i.e. CO2 + CH4 + N2O</p>
+  <p>indirect emissions: emissions associated with stages in the fuel production chain such as raw material extraction and fuel delivery</p>
+  <p>total or ‘life cycle’: the total of direct and indirect emissions</p>
+</div>
