--- a/views/userpage/searchresults.hbs
+++ b/views/userpage/searchresults.hbs
@@ -34,11 +34,11 @@
 
     <form action="/searchresults" method="POST">
       <div>
-        <label for="pointA">PointA:</label>
+        <label class="pointAlabel" for="pointA">Departure:</label>
         <input class="pointA" type="text" name="pointA">
       </div>
       <div>
-        <label for="pointB">PointB:</label>
+        <label class="pointB" for="pointB">Destination:</label>
         <input class="pointB" type="text" name="pointB">
       </div>
       <button class="mainbtn" type="submit">New search</button>
