--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,55 +1,49 @@
 <nav>
-  
-    <div class="navauth">
-      <img class= "navlogo" src= "/images/logo5.png" alt="travelclever-logo">
-      <a href="/auth/login">Login</a>
-      <a href="/auth/signup">Sign Up</a>
-    </div>
+
+  <div class="navauth">
+    <img class="navlogo" src="/images/logo5.png" alt="travelclever-logo">
+    <a href="/auth/login">Login</a>
+    <a href="/auth/signup">Sign Up</a>
+  </div>
 </nav>
 
 <header>
   <div class="background">
     <div>
-      <h1 id="mainparagraph">See insides about your carbon footprint while traveling</h1></br>
-    </div>  
+      <h1 id="mainparagraph">Calculate the carbon footprint of your flight</h1></br>
+    </div>
     <div>
-      <a id="getstarted"href="auth/signup">Get Started</a></br>
+      <a id="getstarted" href="auth/signup">Get Started</a></br>
     </div>
   </div>
 </header>
 
 <div class="usp_overview">
-      <div>
-        <h1>Did you know?</h1>
-      </div>
-        <div class="usp">
-          <div>
-              <img class = "image_usp" src="/images/Transport-Airplane-Take-Off-icon.png" alt="transport-icon">
-              <h4>Huge Transport Industry</h4>
-              <p>Transport and especially flights are the second biggest sector for CO2 emissions</p>
-          </div>
-          <div>
-              <img class = "image_usp" src="/images/goal.png" alt="goal-icon">
-              <h4>Two Tonne Goal</h4>
-              <p>According to: We need to reduce our total CO2 consumption to 2 tonnes by the year 2050</p>
-          </div>
-          <div>
-              <img class = "image_usp" src="/images/footprint_38309.png" alt="everybody-icon">
-              <h4>Everybody can make an impact</h4>
-              <p>Choose your destinations wisely and re-think your way of transport</p>
-          </div>
-        </div>  
-      </div>
+
+  <h1>Did you know?</h1>
+
+  <div class="usp">
+    <div>
+      <img class="image_usp" src="/images/Transport-Airplane-Take-Off-icon.png" alt="transport-icon">
+      <h4>Huge Transport Industry</h4>
+      <p>Transport and especially flights are the second biggest sector for CO2 emissions</p>
+    </div>
+    <div>
+      <img class="image_usp" src="/images/goal.png" alt="goal-icon">
+      <h4>Two Tonne Goal</h4>
+      <p>According to: We need to reduce our total CO2 consumption to 2 tonnes by the year 2050</p>
+    </div>
+    <div>
+      <img class="image_usp" src="/images/footprint_38309.png" alt="everybody-icon">
+      <h4>Everybody can make an impact</h4>
+      <p>Choose your destinations wisely and re-think your way of transport</p>
+    </div>
+  </div>
+</div>
 </div>
 
-  
+
 
 <div class="footer">
   <h1>copyright by travel clever</h1>
 </div>
-
-
-
-
-
-
