--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,55 @@
+html,
 body {
-  padding: 0px;
-  margin: 0px;
+  height: 70%;
+  margin: 0;
+  position: relative;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+
+.wrapper {
+  min-height: 100%;
+  padding-bottom: 0;
+  /* Equal to height of footer */
+  /* But also accounting for potential margin-bottom of last child */
+  margin-bottom: -50px; }
+
+.footer {
+  width: 100%;
+  position: absolute;
+  margin-top: -50px;
+  height: 150px;
+  background-color: #3f6e7b;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  align-items: stretch;
+  justify-content: space-evenly; }
+
+.footer_sr {
+  width: 100%;
+  position: absolute;
+  margin-top: -50px;
+  color: white;
+  background-color: #3f6e7b;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  align-items: stretch;
+  justify-content: space-evenly; }
+
+.footer_saved {
+  width: 100%;
+  position: relative;
+  color: white;
+  background-color: #3f6e7b;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  align-items: stretch;
+  justify-content: space-evenly; }
+
+.info {
+  margin: 3%;
+  text-align: center; }
 
 .navauth {
   background-color: #3f6e7b;
@@ -156,6 +204,13 @@ body {
   align-content: space-between;
   margin: 5%; }
 
+.userpage_sr {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: space-between; }
+
 .searchfield {
   margin: 5%; }
 
@@ -290,6 +345,5 @@ body {
   margin-top: 10px;
   margin-bottom: 20px;
   width: 90px; }
-
 
 /*# sourceMappingURL=style.css.map */
