--- a/views/index.hbs
+++ b/views/index.hbs
@@ -25,25 +25,19 @@
   <div class="usp">
     <div>
       <img class="image_usp" src="/images/Transport-Airplane-Take-Off-icon.png" alt="transport-icon">
-      <h4>Huge Transport Industry</h4>
+      <h3>Huge Transport Industry</h3>
       <p>Transport and especially flights are the second biggest sector for CO2 emissions</p>
     </div>
     <div>
       <img class="image_usp" src="/images/goal.png" alt="goal-icon">
-      <h4>Two Tonne Goal</h4>
-      <p>According to: We need to reduce our total CO2 consumption to 2 tonnes by the year 2050</p>
+      <h3>Two Tonnes Goal</h3>
+      <p>IPCC: Humanity needs to reduce the individual CO2 consumption to 2 tonnes by the year 2050</p>
     </div>
     <div>
       <img class="image_usp" src="/images/footprint_38309.png" alt="everybody-icon">
-      <h4>Everybody can make an impact</h4>
+      <h3>Everybody can make an impact</h3>
       <p>Choose your destinations wisely and re-think your way of transport</p>
     </div>
   </div>
 </div>
-</div>
-
-
-
-<div class="footer">
-  <h1>copyright by travel clever</h1>
 </div>
