--- a/views/userpage/saved-routes.hbs
+++ b/views/userpage/saved-routes.hbs
@@ -1,41 +1,53 @@
 <nav>
   <div class="navauth">
-    <img class= "navlogo" src= "/images/logo5.png" alt="travelclever-logo">
+    <img class="navlogo" src="/images/logo5.png" alt="travelclever-logo">
     <a href="/auth/logout">Logout</a>
     <a href="/auth/userpage">+ Add Routes</a>
   </div>
 </nav>
-<div class="savedrouteslayout">
+<div class="wrapper">
+  <div class="userpage_sr">
+    <div class="savedrouteslayout">
 
-  {{#each result}}
-  <div class="singleRoute">
+      {{#each result}}
+      <div class="singleRoute">
 
-    <div class="generalInfo">
-      <h1>{{this.pointA}} - {{this.pointB}}</h1>
-      <h2>Distance: {{this.distance}} km</h2>
+        <div class="generalInfo">
+          <h1>{{this.pointA}} - {{this.pointB}}</h1>
+          <h2>Distance: {{this.distance}} km</h2>
+        </div>
+        <div class="keys">
+          <span><b>CO2: </b> {{   this.CO2}} kg </span>
+          <span><b>NitrousOxideCO2: </b> {{  this.nitrousOxideCO2e}} kg</span>
+          <span><b>MethaneCO2e: </b> {{  this.methaneCO2e}} kg</span>
+          <span><b>TotalDirectCO2e: </b> {{  this.totalDirectCO2e}} kg</span>
+          <span><b>IndirectCO2e: </b> {{  this.indirectCO2e}} kg</span>
+          <span><b>LifeCycleCO2e: </b> {{  this.lifeCycleCO2e}} kg</span>
+        </div>
+
+        <a href="/saved-routes/delete/{{_id}}"><button class="mainbtn" class="srbtn">Delete</button></a>
+
+      </div>
+      {{/each }}
+
     </div>
-    <div class="keys">
-      <span><b>CO2: </b> {{   this.CO2}} kg </span>
-      <span><b>NitrousOxideCO2: </b> {{  this.nitrousOxideCO2e}} kg</span>
-      <span><b>MethaneCO2e: </b> {{  this.methaneCO2e}} kg</span>
-      <span><b>TotalDirectCO2e: </b> {{  this.totalDirectCO2e}} kg</span>
-      <span><b>IndirectCO2e: </b> {{  this.indirectCO2e}} kg</span>
-      <span><b>LifeCycleCO2e: </b> {{  this.lifeCycleCO2e}} kg</span>
-    </div>
+    <footer class="footer_saved">
 
-    <a href="/saved-routes/delete/{{_id}}"><button class="mainbtn" class="srbtn">Delete</button></a>
+      <div class="info">
+        <p>Direct CO2 emissions: carbon dioxide emissions produced during flight, i.e. fuel combustion</p>
+      </div>
+      <div class="info">
+        <p>Direct CH4 emissions: methane emissions produced during flight, i.e. fuel combustion</p>
+      </div>
+      <div class="info">
+        <p>Direct N2O emissions: nitrous oxide emissions produced during flight, i.e. fuel combustion</p>
+      </div>
+      <div class="info">
+        <p>Total direct emissions: all direct emissions, i.e. CO2 + CH4 + N2O
+          action and fuel delivery</p>
 
+
+      </div>
+    </footer>
   </div>
-  {{/each }}
-
-</div>
-
-
-<div class="footer">
-  <p>direct CO2 emissions: carbon dioxide emissions produced during flight, i.e. fuel combustion</p>
-  <p>direct CH4 emissions: methane emissions produced during flight, i.e. fuel combustion</p>
-  <p>direct N2O emissions: nitrous oxide emissions produced during flight, i.e. fuel combustion</p>
-  <p>total direct emissions: all direct emissions, i.e. CO2 + CH4 + N2O</p>
-  <p>indirect emissions: emissions associated with stages in the fuel production chain such as raw material extraction and fuel delivery</p>
-  <p>total or ‘life cycle’: the total of direct and indirect emissions</p>
-</div>
+  </body>
